# steam-save-farm

./: .gitignore  README.md  flake.nix  pyproject.toml
src/ssf/: cli.py  files.py
tests/: test_files.py
